[DESC] Incluindo mensagen de carregamento do Avatar e evento viewContentLoad para iniciar o carregamento do mesmo. [DESC] Trocada url do server para  OpenShift (produção). [FIX] Removido apply no MenuCtrl que causava erro ao mudar o tamanho da janela durante outros eventos simultâneos.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -192,6 +192,8 @@ body{
 
 #avatarDiv .alert {
   position: absolute;
+  text-align: center;
+  width: 100%;
   top: 0;
   left: 0;
   z-index: 100;
